--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,5 @@ opt-level = 1
 opt-level = 3
 
 [dependencies]
-bevy = { version = "0.17.3", features = ["bevy_remote"] }
+bevy = { version = "0.18", default-features = false, features = ["2d"] }
+
