--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,13 @@ opt-level = 1
 opt-level = 3
 
 [dependencies]
-bevy = { version = "0.18", default-features = false, features = ["2d"] }
+bevy = { version = "0.18", default-features = false, features = ["2d", "ui", "bevy_dev_tools"] }
 bevy-inspector-egui = "0.36.0"
 bevy_ecs_tilemap = "0.18.1"
 thiserror = "2.0.18"
 tiled = "0.15.0"
+
+# For Perlin noise generation
+noise = "0.9.0"
+rand = "0.9.2"
 
