--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,4 +19,6 @@ thiserror = "2.0.18"
 tiled = "0.15.0"
 noise = "0.9.0"
 rand = "0.9.2"
+bevy_common_assets = { version = "0.15.0", features = ["ron"] }
+serde = "1.0.228"
 
