--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,4 +21,6 @@ noise = "0.9.0"
 rand = "0.9.2"
 bevy_common_assets = { version = "0.15.0", features = ["ron"] }
 serde = "1.0.228"
+kd-tree = "0.6.0"
+typenum = "1.18.0"
 
