--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,4 +23,5 @@ bevy_common_assets = { version = "0.15.0", features = ["ron"] }
 serde = "1.0.228"
 kd-tree = "0.6.0"
 typenum = "1.18.0"
+bevy_asset_loader = { version = "0.25.0", features = ["2d"] }
 
